fix: window control buttons misaligned with search bar

--- a/UnShittifySource.theme.css
+++ b/UnShittifySource.theme.css
@@ -70,7 +70,7 @@ If you are discord and wish for this to be taken down, please message me at hell
 
 	background-color: var(--background-tertiary);
 	border-radius: var(--radius-sm);
-	top: 6px;
+	top: 9px;
 	right: var(--space-xs);
 	left: unset;
 	padding: 0;
